--- a/Capitulo12/Capitulo12.csproj
+++ b/Capitulo12/Capitulo12.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{181E60C7-4124-457D-8F0D-97EAF8BA5D5B}</ProjectGuid>
+    <ProjectGuid>{9F582E76-8831-4EED-AE22-17586827A88E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Capitulo10</RootNamespace>
-    <AssemblyName>Capitulo10</AssemblyName>
+    <RootNamespace>Capitulo12</RootNamespace>
+    <AssemblyName>Capitulo12</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -44,12 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clases\Estudiante.cs" />
-    <Compile Include="Clases\Inventario.cs" />
-    <Compile Include="Clases\Poligono.cs" />
-    <Compile Include="Clases\PoligonoPropiedad.cs" />
-    <Compile Include="Clases\PoligonoToString.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Debug\DebugWriteLine.cs" />
+    <Compile Include="Debug\factorial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
